output/test/aqs-4.err
output prefix: llvm/test/aqs-4
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decafcomp ... ok
LogError: Unknown function referenced
; ModuleID = 'QuickSort'

define void @displayList(i32 %start, i32 %len) {
entry:
  %j = alloca i32
  %len2 = alloca i32
  %start1 = alloca i32
  store i32 %start, i32* %start1
  store i32 %len, i32* %len2
  store i32 0, i32* %j
  ret void
}
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "llvm/test/aqs-4.llvm" -o "llvm/test/aqs-4.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: llvm/test/aqs-4.llvm:1:1: error: expected top-level entity
LogError: Unknown function referenced
^
converting to native code:/Users/cmk/llvm/bin/llc "llvm/test/aqs-4.llvm.bc" -o "llvm/test/aqs-4.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: llvm/test/aqs-4.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "llvm/test/aqs-4.llvm.exec" "llvm/test/aqs-4.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: 'llvm/test/aqs-4.llvm.s'
running:llvm/test/aqs-4.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw4/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
